--- a/index.html
+++ b/index.html
@@ -5,6 +5,9 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Game Store</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Acme&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="css/reset.css">
     <link rel="stylesheet" href="css/style.css">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.15.3/css/all.css" integrity="sha384-SZXxX4whJ79/gErwcOYf+zWLeJdY/qpuqC4cAa9rOGUstPomtqpuNWT9wdPEn2fk" crossorigin="anonymous">
@@ -132,8 +135,37 @@
                     <div class="ab-g-content">
                         <div class="game-slides"></div>
                         <div class="g-fa-cont">
-                            <div class="friends-wp"></div>
-                            <div class="achievements"></div>
+                            <div class="friends-wp">
+                                <h5 class="fw-p">Friends Who Play</h5>
+                                <p class="p-playing">Playing</p>
+                                <div class="p-active">
+                                    <img class="active-player" src="img/player-img/batoni-vaso.jpg" alt="player">
+                                    <img class="active-player" src="img/player-img/marksheideri.jpg" alt="player">
+                                    <img class="active-player" src="img/player-img/soso.jpeg" alt="player">
+                                    <img class="active-player" src="img/player-img/zazaevichi.jpeg" alt="player">
+                                </div>
+                                <p class="p-recently">Played Recently</p>
+                                <div class="recently-cont">
+                                    <img class="recently-played" src="img/player-img/pipinia.jpg" alt="recently">
+                                    <img class="recently-played" src="img/player-img/pliusminus.jpg" alt="recently">
+                                    <img class="recently-played" src="img/player-img/q-tamari.jpg" alt="recently">
+                                    <img class="recently-played" src="img/player-img/qmari.jpg" alt="recently">
+                                    <img class="recently-played" src="img/player-img/ushvebulebo.jpg" alt="recently">
+                                    <img class="recently-played" src="img/player-img/xatiani-qali.jpg" alt="recently">
+                                    <img class="recently-played" src="img/player-img/abi-glukoza.jpeg" alt="recently">
+                                </div>
+                            </div>
+                            <div class="achievements">
+                                <h5 class="ach-p">Achievements Progress</h5>
+                                <p class="ach-p-part">73/100</p>
+                                <div class="cup-cont">
+                                    <i class="fas fa-trophy cup-icon"></i>
+                                    <p class="ach-pro">73%</p>
+                                </div>
+                                <div class="w-load-ach">
+                                    <div class="ach-part"></div>
+                                </div>
+                            </div>
                         </div>
                     </div>
                 </div>
