--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
           <li class="nav-li"><a class="nav-a" href="#">COMMUNITY</a></li>
           <li class="nav-li"><a class="nav-a" href="#">FRIENDS</a></li>
           <li class="nav-li">
-            <a class="nav-a" href="/library/Library.html">LIBRARY</a>
+            <a class="nav-a" href="library/Library.html">LIBRARY</a>
           </li>
         </ul>
         <div class="auth-cont">
