--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
           <li class="nav-li"><a class="nav-a" href="#">COMMUNITY</a></li>
           <li class="nav-li"><a class="nav-a" href="#">FRIENDS</a></li>
           <li class="nav-li">
-            <a class="nav-a" href="/library/Library.html">LIBRARY</a>
+            <a class="nav-a" href="library/cyberpunk_2077.html">LIBRARY</a>
           </li>
         </ul>
         <div class="auth-cont">
@@ -52,6 +52,21 @@
       </nav>
     </header>
     <section class="slides-sec" id="slick">
+      <i class="fas fa-bars burger-icon" id="burger-icon"></i>
+      <div class="side-nav" id="side-nav">
+        <i class="fas fa-stream active-burger" id="active-burger"></i>
+        <ul class="sn-ul">
+          <li class="sn-li"><a class="sn-a" href="#">STORE</a></li>
+          <li class="sn-li">
+            <a class="sn-a" href="#">UNREAL ENGINE</a>
+          </li>
+          <li class="sn-li"><a class="sn-a" href="#">COMMUNITY</a></li>
+          <li class="sn-li"><a class="sn-a" href="#">FRIENDS</a></li>
+          <li class="sn-li">
+            <a class="sn-a" href="library/cyberpunk_2077.html">LIBRARY</a>
+          </li>
+        </ul>
+      </div>
       <div class="sign-in-cont" id="sign-in-cont">
         <form class="sign-in-form" action="">
           <label for="email">Email or Username</label><br />
