--- a/index.html
+++ b/index.html
@@ -126,10 +126,18 @@
         </div>
       </div>
       <div class="autoplay at-slider">
-        <div class="slider-item slider-item-1"></div>
-        <div class="slider-item slider-item-2"></div>
-        <div class="slider-item slider-item-3"></div>
-        <div class="slider-item slider-item-4"></div>
+        <div class="slider-item slider-item-1">
+          <img class="slide-img" src="img/fpage-bg-img/TaIeS2.jpg" alt="slide">
+        </div>
+        <div class="slider-item slider-item-2">
+          <img class="slide-img" src="img/fpage-bg-img/1096896.jpg" alt="slide">
+        </div>
+        <div class="slider-item slider-item-3">
+          <img class="slide-img" src="img/fpage-bg-img/valhalla-assassin-s-creed.jpg" alt="slide">
+        </div>
+        <div class="slider-item slider-item-4">
+          <img class="slide-img" src="img/fpage-bg-img//RedDeadRedemption2.jpg" alt="slide">
+        </div>
       </div>
     </section>
     <footer class="st-footer">
