--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
     <header class="st-header">
       <nav class="navigation">
         <ul class="nav-ul">
-          <li class="nav-li"><a class="nav-a" href="#">STORE</a></li>
+          <li class="nav-li"><a class="nav-a" href="store.html">STORE</a></li>
           <li class="nav-li">
             <a class="nav-a" href="#">UNREAL ENGINE</a>
           </li>
@@ -56,7 +56,7 @@
       <div class="side-nav" id="side-nav">
         <i class="fas fa-stream active-burger" id="active-burger"></i>
         <ul class="sn-ul">
-          <li class="sn-li"><a class="sn-a" href="#">STORE</a></li>
+          <li class="sn-li"><a class="sn-a" href="store.html">STORE</a></li>
           <li class="sn-li">
             <a class="sn-a" href="#">UNREAL ENGINE</a>
           </li>
