--- a/store.html
+++ b/store.html
@@ -68,7 +68,7 @@
               <div class="profile-img-cont">
                 <img
                   class="profile-img"
-                  src="../img/profile_image"
+                  src="img/profile_image"
                   alt="profile-img"
                   onmouseover="mouseOverFunc()"
                   onmouseout="mouseOutFunc()"
