--- a/store.html
+++ b/store.html
@@ -57,7 +57,7 @@
               <li class="nav-li"><a class="nav-a" href="#">COMMUNITY</a></li>
               <li class="nav-li"><a class="nav-a" href="#">FRIENDS</a></li>
               <li class="nav-li">
-                <a class="nav-a" href="#">LIBRARY</a>
+                <a class="nav-a" href="library/cyberpunk_2077.html">LIBRARY</a>
               </li>
             </ul>
             <div class="nav-icons">
