--- a/index.html
+++ b/index.html
@@ -128,14 +128,23 @@
       <div class="autoplay at-slider">
         <div class="slider-item slider-item-1">
           <div class="slider-game-info">
-            <h3 class="slider-gi-name">The Witcher® 3: Wild Hunt</h3>
-            <p class="rd">RELEASE DATE: <span>18 May, 2015</span></p>
-            <p>Developer: <span>CD PROJEKT RED</span></p>
-            <p>Publisher: <span>CD PROJEKT RED</span></p>
-            <p>Popular user-defined tags for this product:</p>
-            <div class="game-genre">
-              <span>Open World</span><span>RPG</span>
-              <span>Story Rich</span><span>Atmospheric</span>
+            <div class="sgi-img">
+              <img src="img/game_icons/Witcher_3.jpg" alt="img">
+            </div>
+            <div class="sgi-info">
+              <h3 class="slider-gi-name">The Witcher® 3: Wild Hunt</h3>
+              <p class="rd">RELEASE DATE: <span>18 May, 2015</span></p>
+              <p>Developer: <span>CD PROJEKT RED</span></p>
+              <p>Publisher: <span>CD PROJEKT RED</span></p>
+              <p>Popular user-defined tags for this product:</p>
+              <div class="game-genre">
+                <span>Open World</span><span>RPG</span>
+                <span>Story Rich</span><span>Atmospheric</span>
+              </div>
+              <div class="price-store">
+                <p class="st-price">20$</p>
+                <p class="st-store">Store</p>
+              </div>
             </div>
           </div>
           <div class="slider-item-btn-cont">
@@ -146,15 +155,23 @@
         </div>
         <div class="slider-item slider-item-2">
           <div class="slider-game-info">
-            <h3 class="slider-gi-name">Cyberpunk 2077</h3>
-            <p class="rd">RELEASE DATE: <span>10 Dec, 2020</span></p>
-            <p>Developer: <span>CD PROJEKT RED</span></p>
-            <p>Publisher: <span>CD PROJEKT RED</span></p>
-            <p>Popular user-defined tags for this product:</p>
-            <div class="game-genre">
-              <span>Cyberpunk</span>
-              <span>Open World</span><span>RPG</span>
-              <span>Sci-fi</span><span>Futuristic</span>
+            <div class="sgi-img">
+              <img src="img/game_icons/cyberpunk2077.webp" alt="img">
+            </div>
+            <div class="sgi-info">
+              <h3 class="slider-gi-name">Cyberpunk 2077</h3>
+              <p class="rd">RELEASE DATE: <span>10 Dec, 2020</span></p>
+              <p>Developer: <span>CD PROJEKT RED</span></p>
+              <p>Publisher: <span>CD PROJEKT RED</span></p>
+              <p>Popular user-defined tags for this product:</p>
+              <div class="game-genre">
+                <span>Open World</span><span>RPG</span>
+                <span>Sci-Fi</span><span>Atmospheric</span>
+              </div>
+              <div class="price-store">
+                <p class="st-price">20$</p>
+                <p class="st-store">Store</p>
+              </div>
             </div>
           </div>
           <div class="slider-item-btn-cont">
@@ -165,14 +182,50 @@
         </div>
         <div class="slider-item slider-item-3">
           <div class="slider-game-info">
-            <h3 class="slider-gi-name">Red Dead Redemption 2</h3>
-            <p class="rd">RELEASE DATE: <span>5 Dec, 2019</span></p>
-            <p>Developer: <span>Rockstar Games</span></p>
-            <p>Publisher: <span>Rockstar Games</span></p>
-            <p>Popular user-defined tags for this product:</p>
-            <div class="game-genre">
-              <span>Open World</span><span>Adventure</span>
-              <span>Story Rich</span><span>Western</span>
+            <div class="sgi-img">
+              <img src="img/game_icons/Red_Dead_Redemption_II.jpg" alt="img">
+            </div>
+            <div class="sgi-info">
+              <h3 class="slider-gi-name">Red Dead Redemption 2</h3>
+              <p class="rd">RELEASE DATE: <span>5 Dec, 2019</span></p>
+              <p>Developer: <span>Rockstar Games</span></p>
+              <p>Publisher: <span>Rockstar Games</span></p>
+              <p>Popular user-defined tags for this product:</p>
+              <div class="game-genre">
+                <span>Open World</span><span>Adventure</span>
+                <span>Story Rich</span><span>Western</span>
+              </div>
+              <div class="price-store">
+                <p class="st-price">20$</p>
+                <p class="st-store">Store</p>
+              </div>
+            </div>
+          </div>
+          <div class="slider-item-btn-cont">
+            <a class="st-page" href="#">Store Page</a>
+            <a class="wt" href="#">Watch Trailer</a>           
+          </div>
+          <img class="slide-img" src="img/fpage-bg-img/RedDeadRedemption2.jpg" alt="slide">
+        </div>
+        <div class="slider-item slider-item-4">
+          <div class="slider-game-info">
+            <div class="sgi-img">
+              <img src="img/game_icons/ACValhalla.jpg" alt="img">
+            </div>
+            <div class="sgi-info">
+              <h3 class="slider-gi-name">Assassin's Creed Valhalla</h3>
+              <p class="rd">RELEASE DATE: <span>10 Nov, 2020</span></p>
+              <p>Developer: <span>Ubisoft</span></p>
+              <p>Publisher: <span>Ubisoft</span></p>
+              <p>Popular user-defined tags for this product:</p>
+              <div class="game-genre">
+                <span>Open World</span><span>Adventure</span>
+                <span>Story Rich</span><span>RPG</span>
+              </div>
+              <div class="price-store">
+                <p class="st-price">20$</p>
+                <p class="st-store">Store</p>
+              </div>
             </div>
           </div>
           <div class="slider-item-btn-cont">
@@ -180,24 +233,6 @@
             <a class="wt" href="#">Watch Trailer</a>           
           </div>
           <img class="slide-img" src="img/fpage-bg-img/valhalla-assassin-s-creed.jpg" alt="slide">
-        </div>
-        <div class="slider-item slider-item-4">
-          <div class="slider-game-info">
-            <h3 class="slider-gi-name">Assassin's Creed Valhalla</h3>
-            <p class="rd">RELEASE DATE: <span>10 Nov, 2020</span></p>
-            <p>Developer: <span>Ubisoft</span></p>
-            <p>Publisher: <span>Ubisoft</span></p>
-            <p>Popular user-defined tags for this product:</p>
-            <div class="game-genre">
-              <span>Open World</span><span>RPG</span>
-              <span>Story Rich</span><span>Adventure</span>
-            </div>
-          </div>
-          <div class="slider-item-btn-cont">
-            <a class="st-page" href="#">Store Page</a>
-            <a class="wt" href="#">Watch Trailer</a>           
-          </div>
-          <img class="slide-img" src="img/fpage-bg-img//RedDeadRedemption2.jpg" alt="slide">
         </div>
       </div>
     </section>
