--- a/store.html
+++ b/store.html
@@ -155,6 +155,106 @@
               </form>
               <i class="fas fa-search search-icon-st"></i>
             </div>
+            <div class="fet-rec-cont">
+              <h2>Features & Recommendations</h2>
+              <div class="fet-rec-slider multiple-items">
+                <div class="fr-slider-item">
+                  <div class="fr-row">
+                    <div class="fr-main-img">
+                      <img src="img/store-img/no-man-sky-main.jpg" alt="img">
+                    </div>
+                    <div class="fr-info"> 
+                      <h2 class="fr-info-h3">No Man's Sky</h2>
+                      <div class="fr-info-imgs">
+                        <img src="img/store-img/no-mans-sky-01.jpg" alt="img">
+                        <img src="img/store-img/no-mans-sky-02.jpg" alt="img">
+                        <img src="img/store-img/no-mans-sky-03.jpg" alt="img">
+                        <img src="img/store-img/no-mans-sky-04.jpg" alt="img">
+                      </div>
+                      <h3>Now Available</h3>
+                      <h5>Top Seller</h5>
+                      <p>$34.99 USD</p>
+                    </div>
+                  </div>
+                </div>
+                <div class="fr-slider-item">
+                  <div class="fr-row">
+                    <div class="fr-main-img">
+                      <img src="img/store-img/bf-5-main-img.jpg" alt="img">
+                    </div>
+                    <div class="fr-info"> 
+                      <h3 class="fr-info-h3">Battlefield 5</h3>
+                      <div class="fr-info-imgs">
+                        <img src="img/store-img/bf-5-01.jpg" alt="img">
+                        <img src="img/store-img/bf-5-02.jpg" alt="img">
+                        <img src="img/store-img/bf-5-03.jpg" alt="img">
+                        <img src="img/store-img/bf-5-04.jpg" alt="img">
+                      </div>
+                      <h3>Now Available</h3>
+                      <h5>Top Seller</h5>
+                      <p>$49.99 USD</p>
+                    </div>
+                  </div>
+                </div>
+                <div class="fr-slider-item">
+                  <div class="fr-row">
+                    <div class="fr-main-img">
+                      <img src="img/store-img/witcher-3-main-img.jpg" alt="img">
+                    </div>
+                    <div class="fr-info"> 
+                      <h3 class="fr-info-h3">The Witcher® 3: Wild Hunt</h3>
+                      <div class="fr-info-imgs">
+                        <img src="img/store-img/witcher-3-01.jpg" alt="img">
+                        <img src="img/store-img/witcher-3-02.jpeg" alt="img">
+                        <img src="img/store-img/witcher-3-03.jpg" alt="img">
+                        <img src="img/store-img/witcher-03-04.jpg" alt="img">
+                      </div>
+                      <h3>Now Available</h3>
+                      <h5>Top Seller</h5>
+                      <p>$19.99 USD</p>
+                    </div>
+                  </div>
+                </div>
+                <div class="fr-slider-item">
+                  <div class="fr-row">
+                    <div class="fr-main-img">
+                      <img src="img/store-img/bioshock-main-img.jpg" alt="img">
+                    </div>
+                    <div class="fr-info"> 
+                      <h3 class="fr-info-h3">BioShock Infinite</h3>
+                      <div class="fr-info-imgs">
+                        <img src="img/store-img/bi0shock-01.jpeg" alt="img">
+                        <img src="img/store-img/bioshock-02.jpg" alt="img">
+                        <img src="img/store-img/bioshock-03.jpg" alt="img">
+                        <img src="img/store-img/bioshock-04.jpg" alt="img">
+                      </div>
+                      <h3>Now Available</h3>
+                      <h5>Top Seller</h5>
+                      <p>$17.99 USD</p>
+                    </div>
+                  </div>
+                </div>
+                <div class="fr-slider-item">
+                  <div class="fr-row">
+                    <div class="fr-main-img">
+                      <img src="img/store-img/ac-main-img.jpg" alt="img">
+                    </div>
+                    <div class="fr-info"> 
+                      <h3 class="fr-info-h3">Assassin’s Creed® Brotherhood</h3>
+                      <div class="fr-info-imgs">
+                        <img src="img/store-img/ac-01.jpg" alt="img">
+                        <img src="img/store-img/ac-02.jpg" alt="img">
+                        <img src="img/store-img/ac-03.jpg" alt="img">
+                        <img src="img/store-img/ac-04.jpg" alt="img">
+                      </div>
+                      <h3>Now Available</h3>
+                      <h5>Top Seller</h5>
+                      <p>$11.99 USD</p>
+                    </div>
+                  </div>
+                </div>
+              </div>
+            </div>
           </div>
         </section>
         <footer class="store-footer footer">
