--- a/store.html
+++ b/store.html
@@ -46,8 +46,8 @@
             </li>
           </ul>
         </div>
-        <header class="header">
-          <nav class="navigation">
+        <header class="header store-header">
+          <nav class="navigation" id="navigation-store">
             <i class="fas fa-bars burger-icon-l"></i>
             <ul class="nav-ul">
               <li class="nav-li"><a class="nav-active" href="#">STORE</a></li>
@@ -255,16 +255,97 @@
                 </div>
               </div>
             </div>
+            <div class="special-offers">
+              <h1>Special Offers</h1>
+              <div class="sf-item">
+                <div class="sf-img">
+                  <img src="img/special-offers-img/hunt-showdown.jpg" alt="img">
+                </div>
+                <h6>Hunt: Showdown</h6>
+                <div class="sf-prices">
+                  <p class="sf-percent">50%</p>
+                  <div class="n-o-price">
+                    <p class="old-p">21.99$</p>
+                    <p class="new-p">10.95$</p>
+                  </div>
+                </div>
+              </div>
+              <div class="sf-item">
+                <div class="sf-img">
+                  <img src="img/special-offers-img/Mordhau.jpg" alt="img">
+                </div>
+                <h6>MORDHAU</h6>
+                <div class="sf-prices">
+                  <p class="sf-percent">90%</p>
+                  <div class="n-o-price">
+                    <p class="old-p">11.99%</p>
+                    <p class="new-p">1.19$</p>
+                  </div>
+                </div>
+              </div>
+              <div class="sf-item">
+                <div class="sf-img">
+                  <img src="img/special-offers-img/gang-beasts.jpg" alt="img">
+                </div>
+                <h6>Gang Beasts</h6>
+                <div class="sf-prices">
+                  <p class="sf-percent">30%</p>
+                  <div class="n-o-price">
+                    <p class="old-p">12.99$</p>
+                    <p class="new-p">9.09$</p>
+                  </div>
+                </div>
+              </div>
+              <div class="sf-item">
+                <div class="sf-img">
+                  <img src="img/special-offers-img/scrap-mechanic.jpg" alt="img">
+                </div>
+                <h6>Scrap Mechanic</h6>
+                <div class="sf-prices">
+                  <p class="sf-percent">40%</p>
+                  <div class="n-o-price">
+                    <p class="old-p">12.55$<p>
+                    <p class="new-p">7.53$</p>
+                  </div>
+                </div>
+              </div>
+              <div class="sf-item">
+                <div class="sf-img">
+                  <img src="img/special-offers-img/biomutant.webp" alt="img">
+                </div>
+                <h6>BIOMUTANT</h6>
+                <div class="sf-prices">
+                  <p class="sf-percent">20%</p>
+                  <div class="n-o-price">
+                    <p class="old-p">27.99$</p>
+                    <p class="new-p">22.40&</p>
+                  </div>
+                </div>
+              </div>
+              <div class="sf-item">
+                <div class="sf-img">
+                  <img src="img/special-offers-img/forza-horizon-5.jpg" alt="img">
+                </div>
+                <h6>Forza Horizon 5</h6>
+                <div class="sf-prices">
+                  <p class="sf-percent">10%</p>
+                  <div class="n-o-price">
+                    <p class="old-p">34.50$</p>
+                    <p class="new-p">31.05$</p>
+                  </div>
+                </div>
+              </div>
+            </div>
           </div>
         </section>
-        <footer class="store-footer footer">
-          <p class="copyright">&copy;&nbsp;Zura Japoshvili</p>
-          <div class="footer-icons">
-            <a href="#"><i class="fab fa-github github-icon"></i></a>
-            <a href="#"><i class="fab fa-linkedin linkedin-icon"></i></a>
-          </div>
-        </footer>
       </div>
+      <footer class="store-footer footer">
+        <p class="copyright">&copy;&nbsp;Zura Japoshvili</p>
+        <div class="footer-icons">
+          <a href="#"><i class="fab fa-github github-icon"></i></a>
+          <a href="#"><i class="fab fa-linkedin linkedin-icon"></i></a>
+        </div>
+      </footer>
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
     <script src="js/slick.min.js"></script>
     <script src="js/store_script.js"></script>
