--- a/store.html
+++ b/store.html
@@ -318,7 +318,7 @@
                   <p class="sf-percent">20%</p>
                   <div class="n-o-price">
                     <p class="old-p">27.99$</p>
-                    <p class="new-p">22.40&</p>
+                    <p class="new-p">22.40$</p>
                   </div>
                 </div>
               </div>
@@ -335,6 +335,12 @@
                   </div>
                 </div>
               </div>
+            </div>
+            <div class="browse-store">
+              <p>New Releases</p>
+              <p>Free To Play</p>
+              <p>Special</p>
+              <p>By User Tag</p>            
             </div>
           </div>
         </section>
