--- a/index.html
+++ b/index.html
@@ -3,6 +3,14 @@
   <head>
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="description" content="Games Store">
+    <meta name="keywords" content="Game, Store, Gaming, PLay Game">
+    <meta property="og:url"                content="https://giorgi-dzamanashvili.github.io/final/" />
+    <meta name="author" content="Zura Japoshvili">
+    <meta property="og:type"               content="article" />
+    <meta property="og:title"              content="Game Store" />
+    <meta property="og:description"        content="Buy Games" />
+    <meta property="og:image"              content="" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link
       rel="icon"
@@ -128,22 +136,24 @@
       <div class="autoplay at-slider">
         <div class="slider-item slider-item-1">
           <div class="slider-game-info">
-            <div class="sgi-img">
-              <img src="img/game_icons/Witcher_3.jpg" alt="img">
-            </div>
-            <div class="sgi-info">
-              <h3 class="slider-gi-name">The Witcher® 3: Wild Hunt</h3>
-              <p class="rd">RELEASE DATE: <span>18 May, 2015</span></p>
-              <p>Developer: <span>CD PROJEKT RED</span></p>
-              <p>Publisher: <span>CD PROJEKT RED</span></p>
-              <p>Popular user-defined tags for this product:</p>
-              <div class="game-genre">
-                <span>Open World</span><span>RPG</span>
-                <span>Story Rich</span><span>Atmospheric</span>
+            <div class="slider-game-cont">
+              <div class="sgi-img">
+                <img src="img/game_icons/Witcher_3.jpg" alt="img">
               </div>
-              <div class="price-store">
-                <p class="st-price">20$</p>
-                <p class="st-store">Store</p>
+              <div class="sgi-info">
+                <h3 class="slider-gi-name">The Witcher® 3: Wild Hunt</h3>
+                <p class="rd">RELEASE DATE: <span>18 May, 2015</span></p>
+                <p>Developer: <span>CD PROJEKT RED</span></p>
+                <p>Publisher: <span>CD PROJEKT RED</span></p>
+                <p>Popular user-defined tags for this product:</p>
+                <div class="game-genre">
+                  <span>Open World</span><span>RPG</span>
+                  <span>Story Rich</span><span>Atmospheric</span>
+                </div>
+                <div class="price-store">
+                  <p class="st-price">20$</p>
+                  <p class="st-store">Store</p>
+                </div>
               </div>
             </div>
           </div>
@@ -155,24 +165,26 @@
         </div>
         <div class="slider-item slider-item-2">
           <div class="slider-game-info">
-            <div class="sgi-img">
-              <img src="img/game_icons/cyberpunk2077.webp" alt="img">
-            </div>
-            <div class="sgi-info">
-              <h3 class="slider-gi-name">Cyberpunk 2077</h3>
-              <p class="rd">RELEASE DATE: <span>10 Dec, 2020</span></p>
-              <p>Developer: <span>CD PROJEKT RED</span></p>
-              <p>Publisher: <span>CD PROJEKT RED</span></p>
-              <p>Popular user-defined tags for this product:</p>
-              <div class="game-genre">
-                <span>Open World</span><span>RPG</span>
-                <span>Sci-Fi</span><span>Atmospheric</span>
+            <div class="slider-game-cont">
+              <div class="sgi-img">
+                <img src="img/game_icons/cyberpunk2077.webp" alt="img">
               </div>
-              <div class="price-store">
-                <p class="st-price">20$</p>
-                <p class="st-store">Store</p>
+              <div class="sgi-info">
+                <h3 class="slider-gi-name">Cyberpunk 2077</h3>
+                <p class="rd">RELEASE DATE: <span>10 Dec, 2020</span></p>
+                <p>Developer: <span>CD PROJEKT RED</span></p>
+                <p>Publisher: <span>CD PROJEKT RED</span></p>
+                <p>Popular user-defined tags for this product:</p>
+                <div class="game-genre">
+                  <span>Open World</span><span>RPG</span>
+                  <span>Sci-Fi</span><span>Atmospheric</span>
+                </div>
+                <div class="price-store">
+                  <p class="st-price">20$</p>
+                  <p class="st-store">Store</p>
+                </div>
               </div>
-            </div>
+            </div> 
           </div>
           <div class="slider-item-btn-cont">
             <a class="st-page" href="#">Store Page</a>
@@ -182,24 +194,26 @@
         </div>
         <div class="slider-item slider-item-3">
           <div class="slider-game-info">
-            <div class="sgi-img">
-              <img src="img/game_icons/Red_Dead_Redemption_II.jpg" alt="img">
-            </div>
-            <div class="sgi-info">
-              <h3 class="slider-gi-name">Red Dead Redemption 2</h3>
-              <p class="rd">RELEASE DATE: <span>5 Dec, 2019</span></p>
-              <p>Developer: <span>Rockstar Games</span></p>
-              <p>Publisher: <span>Rockstar Games</span></p>
-              <p>Popular user-defined tags for this product:</p>
-              <div class="game-genre">
-                <span>Open World</span><span>Adventure</span>
-                <span>Story Rich</span><span>Western</span>
+            <div class="slider-game-cont">
+              <div class="sgi-img">
+                <img src="img/game_icons/Red_Dead_Redemption_II.jpg" alt="img">
               </div>
-              <div class="price-store">
-                <p class="st-price">20$</p>
-                <p class="st-store">Store</p>
+              <div class="sgi-info">
+                <h3 class="slider-gi-name">Red Dead Redemption 2</h3>
+                <p class="rd">RELEASE DATE: <span>5 Dec, 2019</span></p>
+                <p>Developer: <span>Rockstar Games</span></p>
+                <p>Publisher: <span>Rockstar Games</span></p>
+                <p>Popular user-defined tags for this product:</p>
+                <div class="game-genre">
+                  <span>Open World</span><span>Adventure</span>
+                  <span>Story Rich</span><span>Western</span>
+                </div>
+                <div class="price-store">
+                  <p class="st-price">20$</p>
+                  <p class="st-store">Store</p>
+                </div>
               </div>
-            </div>
+            </div>  
           </div>
           <div class="slider-item-btn-cont">
             <a class="st-page" href="#">Store Page</a>
@@ -209,22 +223,24 @@
         </div>
         <div class="slider-item slider-item-4">
           <div class="slider-game-info">
-            <div class="sgi-img">
-              <img src="img/game_icons/ACValhalla.jpg" alt="img">
-            </div>
-            <div class="sgi-info">
-              <h3 class="slider-gi-name">Assassin's Creed Valhalla</h3>
-              <p class="rd">RELEASE DATE: <span>10 Nov, 2020</span></p>
-              <p>Developer: <span>Ubisoft</span></p>
-              <p>Publisher: <span>Ubisoft</span></p>
-              <p>Popular user-defined tags for this product:</p>
-              <div class="game-genre">
-                <span>Open World</span><span>Adventure</span>
-                <span>Story Rich</span><span>RPG</span>
+            <div class="slider-game-cont">
+              <div class="sgi-img">
+                <img src="img/game_icons/ACValhalla.jpg" alt="img">
               </div>
-              <div class="price-store">
-                <p class="st-price">20$</p>
-                <p class="st-store">Store</p>
+              <div class="sgi-info">
+                <h3 class="slider-gi-name">Assassin's Creed Valhalla</h3>
+                <p class="rd">RELEASE DATE: <span>10 Nov, 2020</span></p>
+                <p>Developer: <span>Ubisoft</span></p>
+                <p>Publisher: <span>Ubisoft</span></p>
+                <p>Popular user-defined tags for this product:</p>
+                <div class="game-genre">
+                  <span>Open World</span><span>Adventure</span>
+                  <span>Story Rich</span><span>RPG</span>
+                </div>
+                <div class="price-store">
+                  <p class="st-price">20$</p>
+                  <p class="st-store">Store</p>
+                </div>
               </div>
             </div>
           </div>
