--- a/index.html
+++ b/index.html
@@ -5,12 +5,12 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="description" content="Games Store">
     <meta name="keywords" content="Game, Store, Gaming, PLay Game">
-    <meta property="og:url"                content="https://giorgi-dzamanashvili.github.io/final/" />
+    <meta property="og:url"                content="https://zura-japoshvili.github.io/Game-Store/" />
     <meta name="author" content="Zura Japoshvili">
     <meta property="og:type"               content="article" />
     <meta property="og:title"              content="Game Store" />
     <meta property="og:description"        content="Buy Games" />
-    <meta property="og:image"              content="" />
+    <meta property="og:image"              content="img/site-icon/70e902945f52904d0fdd033d7500877d-removebg-preview.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link
       rel="icon"
