--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <meta property="og:type"               content="article" />
     <meta property="og:title"              content="Game Store" />
     <meta property="og:description"        content="Buy Games" />
-    <meta property="og:image"              content="img/site-icon/70e902945f52904d0fdd033d7500877d-removebg-preview.png" />
+    <meta property="og:image"              content="https://zura-japoshvili.github.io/Game-Store/img/site-icon/70e902945f52904d0fdd033d7500877d-removebg-preview.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link
       rel="icon"
